# amp

./: Cargo.toml  justfile  pnpm-lock.yaml  tsconfig.json
.agents/skills/feat-discovery/: SKILL.md
.config/: nextest.toml
.github/workflows/: build.yml  ci.yml  claude-code-review.yml  codeql.yml
crates/arrow-to-postgres/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config_file.rs  controller.rs  lib.rs  materialize.rs  monitoring.rs  server.rs
crates/controller-admin-jobs/: Cargo.toml
crates/controller-admin-jobs/src/: ctx.rs  datasets.rs  jobs.rs  lib.rs  scheduler.rs
crates/controller-admin-jobs/src/datasets/: handlers.rs
crates/controller-admin-jobs/src/datasets/handlers/: deploy.rs  list_jobs.rs
crates/controller-admin-jobs/src/jobs/: handlers.rs
crates/controller-admin-jobs/src/jobs/handlers/: create.rs  delete.rs  delete_by_id.rs  event_by_id.rs  events.rs  get_all.rs  get_by_id.rs  job_info.rs  progress.rs  stop.rs
crates/controller-admin-providers/: Cargo.toml
crates/controller-admin-system/: Cargo.toml
crates/core/common/: Cargo.toml
crates/core/common/benches/: segments.rs
crates/core/common/src/: datasets_cache.rs  detached_logical_plan.rs  exec_env.rs  filter_pushthrough_decode.rs  incrementalizer.rs  lib.rs  memory_pool.rs  plan_visitors.rs  rpc_catalog_provider.rs  sql.rs  streaming_query.rs  udfs.rs
crates/core/common/src/catalog/physical/: block_num_filter.rs  snapshot.rs
crates/core/common/src/context/: exec.rs  session_state.rs
crates/core/common/src/metadata/: size.rs
crates/core/common/src/physical_table/: file.rs  segments.rs  snapshot.rs  table.rs
crates/core/common/src/physical_table/segments/: fixtures.rs  mod.rs  tests.rs
crates/core/common/src/plan_visitors/: tests.rs
crates/core/common/src/streaming_query/: message_stream_with_block_complete.rs
crates/core/common/src/udfs/: evm_common.rs  evm_decode_fast.rs  evm_decode_log.rs  evm_decode_type.rs  evm_function_params.rs  ts.rs
crates/core/common/src/udfs/eth_call/: cache.rs  udf.rs
crates/core/common/tests/: it_session_async_resolution.rs
crates/core/job-materialize-datasets-derived/: Cargo.toml
crates/core/job-materialize-datasets-derived/src/: job_impl.rs
crates/core/job-materialize-datasets-derived/src/job_impl/: query.rs  table.rs
crates/extractors/bitcoin-rpc/: Cargo.toml
crates/extractors/bitcoin-rpc/src/: lib.rs  tables.rs
crates/job-core/: Cargo.toml  README.md  build.rs
crates/job-core/proto/: events.proto
crates/job-core/src/: ctx.rs  error.rs  events.rs  kafka.rs  lib.rs  materialize.rs  retry_strategy.rs  trigger.rs
crates/job-core/src/events/: emitter.rs  kafka.rs  progress_adapter.rs
crates/job-core/src/kafka/: client.rs
crates/job-core/src/materialize/: block_ranges.rs  check.rs  collector.rs  compaction.rs  error_detail.rs  progress.rs  tasks.rs  writer.rs
crates/job-core/src/materialize/collector/: error.rs  metrics.rs
crates/job-core/src/materialize/compaction/: collector.rs  compactor.rs  error.rs  metrics.rs  plan.rs
crates/job-core/src/proto/: amp.job.events.v1.rs  mod.rs
crates/job-gc/: Cargo.toml
crates/job-gc/src/: job_ctx.rs  job_descriptor.rs  job_impl.rs  job_key.rs
crates/job-materialize-datasets-derived/: Cargo.toml
crates/job-materialize-datasets-derived/src/: job_ctx.rs  job_impl.rs  job_key.rs  lib.rs  metrics.rs
crates/job-materialize-datasets-derived/src/job_impl/: query.rs  table.rs
crates/job-materialize-datasets-raw/: Cargo.toml
crates/job-materialize-datasets-raw/src/: job_ctx.rs  job_impl.rs  job_key.rs  metrics.rs
crates/job-materialize-datasets-raw/src/job_impl/: ranges.rs  writer.rs
crates/parquet-ext/: Cargo.toml
crates/providers-bitcoin-rpc/: Cargo.toml
crates/providers-bitcoin-rpc/src/: client.rs  config.rs  error.rs  kind.rs  lib.rs  metrics.rs  rpc.rs  tables.rs
crates/providers-bitcoin-rpc/src/tables/: blocks.rs  inputs.rs  outputs.rs  transactions.rs
crates/providers-bitcoin-rpc/src/tests/: it_block_stream.rs
crates/providers-common/: Cargo.toml
crates/providers-evm-rpc/: Cargo.toml
crates/providers-evm-rpc/src/: client.rs  config.rs  error.rs  lib.rs  new_heads.rs  provider.rs  ws_connect.rs
crates/providers-evm-rpc/src/tables/: transactions.rs
crates/providers-firehose/: Cargo.toml
crates/providers-registry/: Cargo.toml
crates/providers-registry/src/: store.rs
crates/providers-registry/src/client/: block_stream.rs
crates/providers-registry/src/tests/: cache.rs
crates/providers-solana/: Cargo.toml
crates/providers-tempo/: Cargo.toml
crates/services/admin-api/: Cargo.toml
crates/services/admin-api/src/: lib.rs  scheduler.rs
crates/services/admin-api/src/handlers/revisions/: prune.rs
crates/services/worker/: Cargo.toml
crates/services/worker/src/: config.rs  job.rs  service.rs
crates/services/worker/src/events/: progress_adapter.rs
crates/services/worker/src/service/: error.rs  job_impl.rs  job_queue.rs  job_set.rs
crates/worker-core/: Cargo.toml
crates/worker-core/src/: job_ledger.rs  job_router.rs  lib.rs
crates/worker-service/: Cargo.toml
crates/worker-service/src/: config.rs  job.rs  kafka.rs  lib.rs  service.rs
crates/worker-service/src/events/: progress_adapter.rs
crates/worker-service/src/job/: notif.rs
crates/worker-service/src/kafka/: client.rs
crates/worker-service/src/service/: error.rs  job_ctx.rs  job_impl.rs  job_set.rs
docs/: config.sample.toml  quickstart.md
docs/code/: errors-reporting.md  extractors.md  services.md
docs/feat/: admin-dataset.md  admin-job-progress.md  admin-job.md  app-amp-typescript.md  app-ampd-server.md  app-ampd-worker-events.md  app-ampup.md  provider-registry.md  provider-solana.md  provider.md  query-sql-streaming.md  query-transport-flight.md
tests/: Cargo.toml
tests/specs/: batch-block-num-anvil.yaml  batch-ts-compat-anvil.yaml  intra-deps.yaml  multi-version.yaml  sql-streaming-tests-with-sql-datasets.yaml  sql-tests.yaml  streaming-distinct-on-derived-anvil.yaml
tests/src/: main.rs
typescript/amp/: package.json
(+222 files in other folders)
