[workspace]
members = [
    "crates/arrow-to-postgres",
    "crates/bin/ampcc",
    "crates/bin/ampctl",
    "crates/bin/ampd",
    "crates/bin/ampsync",
    "crates/clients/admin",
    "crates/clients/flight",
    "crates/config",
    "crates/config/gen",
    "crates/controller-admin-datasets",
    "crates/controller-admin-jobs",
    "crates/controller-admin-providers",
    "crates/controller-admin-system",
    "crates/controller-admin-tables",
    "crates/core/common",
    "crates/core/data-store",
    "crates/core/datasets-common",
    "crates/core/datasets-derived",
    "crates/core/datasets-derived/gen",
    "crates/core/datasets-raw",
    "crates/core/datasets-raw/gen",
    "crates/core/datasets-registry",
    "crates/core/datasets-static",
    "crates/core/datasets-static/gen",
    "crates/core/js-runtime",
    "crates/core/metadata-db",
    "crates/core/monitoring",
    "crates/core/object-store",
    "crates/core/parquet",
    "crates/core/verification",
    "crates/extractors/evm-rpc",
    "crates/extractors/evm-rpc/gen",
    "crates/extractors/firehose",
    "crates/extractors/firehose/gen",
    "crates/extractors/solana",
    "crates/extractors/solana/gen",
    "crates/extractors/solana-storage-proto",
    "crates/extractors/tempo",
    "crates/extractors/tempo/gen",
    "crates/job-core",
    "crates/job-gc",
    "crates/job-materialize-datasets-derived",
    "crates/job-materialize-datasets-raw",
    "crates/parquet-ext",
    "crates/providers-common",
    "crates/providers-evm-rpc",
    "crates/providers-evm-rpc/gen",
    "crates/providers-firehose",
    "crates/providers-firehose/gen",
    "crates/providers-registry",
    "crates/providers-solana",
    "crates/providers-solana/gen",
    "crates/providers-static",
    "crates/providers-static/gen",
    "crates/providers-tempo",
    "crates/providers-tempo/gen",
    "crates/services/controller",
    "crates/services/controller/gen",
    "crates/services/metadata-db-postgres",
    "crates/services/server",
    "crates/worker-core",
    "crates/worker-service",
    "tests",
]

resolver = "2"

[workspace.metadata.cargo-shear]
# Ignore minimal lib.rs files in codegen auxiliary crates
ignored-paths = [
    "*/gen/src/lib.rs",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
alloy = { version = "1.4", default-features = false, features = [
    "contract",
    "dyn-abi",
    "json-abi",
    "json-rpc",
    "node-bindings",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "reqwest-rustls-tls",
    "rpc",
    "rpc-types",
    "rpc-types-anvil",
    "signer-local",
    "signers",
] }
anyhow = "1.0.80"
async-stream = "0.3.6"
async-trait = "0.1.80"
axum = { version = "0.8.0", default-features = false, features = [
    "json",
    "query",
    "tokio",
    "http1",
] }
backon = { version = "1.5.1", default-features = false, features = [
    "std",
    "tokio-sleep",
] }
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.1"
bs58 = "0.5.1"
bytes = "1.11.1"
chrono = "0.4.41"
clap = { version = "4.5.2", features = ["derive", "env"] }
cron = "0.15"
dotenvy = "0.15"
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
fs-err = "3.0.0"
futures = "0.3"
governor = "0.10.0"
headers = "0.4"
hex = "0.4.3"
indicatif = "0.18"
indoc = "2.0.6"
itertools = "0.14.0"
memmap2 = "0.9"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "http-proto",
] }
opentelemetry_sdk = { version = "0.31" }
parking_lot = "0.12.5"
pg_escape = "0.1"
pretty_assertions = "1.4.1"
rand = "0.9.0"
regex = "1.10.2"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "query",
    "rustls",
    "stream",
] }
rstest = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
schemars = "1.0.4"
semver = { version = "1.0.18", features = ["serde"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde_with = "3.16"
serde_yaml = "0.9.34"
sqlparser = "0.61"
tempfile = "3.13.0"
thiserror = "2.0"
tokio = { version = "1.36.0", features = [
    "macros",
    "test-util",
    "rt-multi-thread",
    "parking_lot",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["rt"] }
toml = "0.8.10"
tower = "0.5.2"
tower-http = "0.6.2"
http = "1.3"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-opentelemetry = { version = "0.32", features = ["default"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-arrow = { version = "0.7.0", default-features = false, features = ["derive", "views", "arrow-58"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v7"] }
nix = { version = "0.30.1", default-features = false, features = ["signal"] }
percent-encoding = "2.3"
webpki-roots = "0.26"
which = "8.0.0"
zstd = "0.13.3"

# Datafusion and Arrow crates
arrow = "58"
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
datafusion = { version = "53", features = ["serde"] }
datafusion-tracing = { version = "53" }
datafusion-datasource = { version = "53" }
object_store = { version = "0.13", features = ["aws", "gcp", "azure"] }

# Crates that should follow the version used by DataFusion and Arrow
prost = "0.14.1"
prost-build = "0.14.1"
tonic = { version = "0.14", features = [
    "transport",
    "gzip",
    "tls-native-roots",
] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

[profile.dev]
# Locally measured to reduce total wall clock time of `cargo build` by 34%
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"
