[package]
name = "amp-job-core"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-data-store = { path = "../core/data-store" }
amp-parquet = { path = "../core/parquet" }
common = { path = "../core/common" }
datafusion.workspace = true
datasets-common = { path = "../core/datasets-common" }
futures.workspace = true
hex.workspace = true
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
object_store.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
