[package]
name = "amp-job-gc"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-data-store = { path = "../core/data-store" }
amp-job-core = { path = "../job-core" }
futures.workspace = true
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
