[package]
name = "amp-job-materialize-datasets-derived"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-data-store = { path = "../core/data-store" }
amp-job-core = { path = "../job-core" }
amp-parquet = { path = "../core/parquet" }
common = { path = "../core/common" }
datafusion.workspace = true
datasets-common = { path = "../core/datasets-common" }
datasets-derived = { path = "../core/datasets-derived" }
futures.workspace = true
js-runtime = { path = "../core/js-runtime" }
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
