[package]
name = "amp-job-materialize-datasets-raw"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-data-store = { path = "../core/data-store" }
amp-job-core = { path = "../job-core" }
amp-parquet = { path = "../core/parquet" }
amp-providers-evm-rpc = { path = "../providers-evm-rpc" }
amp-providers-registry = { path = "../providers-registry" }
common = { path = "../core/common" }
datafusion.workspace = true
datasets-common = { path = "../core/datasets-common" }
datasets-raw = { path = "../core/datasets-raw" }
futures.workspace = true
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
verification = { path = "../core/verification" }

[dev-dependencies]
rstest.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
