[package]
name = "amp-providers-registry"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-providers-bitcoin-rpc = { path = "../providers-bitcoin-rpc" }
amp-providers-common = { path = "../providers-common" }
amp-providers-evm-rpc = { path = "../providers-evm-rpc" }
amp-providers-firehose = { path = "../providers-firehose" }
amp-providers-solana = { path = "../providers-solana" }
amp-providers-tempo = { path = "../providers-tempo" }
async-stream.workspace = true
datasets-common = { path = "../core/datasets-common" }
datasets-raw = { path = "../core/datasets-raw" }
futures.workspace = true
monitoring = { path = "../core/monitoring" }
object_store.workspace = true
parking_lot = "0.12.4"
thiserror.workspace = true
tokio.workspace = true
toml = { workspace = true, features = ["preserve_order"] }
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true