[package]
name = "amp-worker-service"
edition = "2024"
version.workspace = true
license-file.workspace = true

[dependencies]
amp-config = { path = "../config" }
amp-data-store = { path = "../core/data-store" }
amp-job-core = { path = "../job-core", features = ["events-kafka"] }
amp-job-gc = { path = "../job-gc" }
amp-job-materialize-datasets-derived = { path = "../job-materialize-datasets-derived" }
amp-job-materialize-datasets-raw = { path = "../job-materialize-datasets-raw" }
amp-worker-core = { path = "../worker-core" }
backon.workspace = true
common = { path = "../core/common" }
futures.workspace = true
js-runtime = { path = "../core/js-runtime" }
metadata-db = { path = "../core/metadata-db" }
monitoring = { path = "../core/monitoring" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
