[package]
name = "common"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[features]
test-fixtures = ["dep:flate2", "dep:postcard"]

[dependencies]
alloy.workspace = true
amp-data-store = { path = "../data-store" }
amp-datasets-registry = { path = "../datasets-registry" }
amp-parquet = { path = "../parquet" }
amp-providers-common = { path = "../../providers-common" }
amp-providers-registry = { path = "../../providers-registry" }
arrow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bigdecimal = "0.4"
bs58.workspace = true
chrono.workspace = true
datafusion.workspace = true
datafusion-datasource.workspace = true
datafusion-tracing.workspace = true
datasets-common = { path = "../datasets-common" }
datasets-derived = { path = "../datasets-derived" }
datasets-raw = { path = "../datasets-raw" }
bitcoin-rpc-datasets = { path = "../../extractors/bitcoin-rpc" }
evm-rpc-datasets = { path = "../../extractors/evm-rpc" }
firehose-datasets = { path = "../../extractors/firehose" }
futures.workspace = true
itertools.workspace = true
js-runtime = { path = "../js-runtime" }
metadata-db = { path = "../metadata-db" }
monitoring = { path = "../monitoring" }
object_store.workspace = true
parking_lot = "0.12.4"
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-datasets = { path = "../../extractors/solana" }
tempo-datasets = { path = "../../extractors/tempo" }
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
url.workspace = true
uuid.workspace = true
flate2 = { version = "1", optional = true }
postcard = { version = "1", features = ["alloc"], optional = true }

[dev-dependencies]
amp-object-store = { path = "../object-store" }
chrono.workspace = true
indoc.workspace = true
metadata-db-postgres = { path = "../../services/metadata-db-postgres" }
tempfile.workspace = true
criterion = "0.5"
flate2 = "1"
postcard = { version = "1", features = ["alloc"] }

[[bench]]
name = "segments"
harness = false
required-features = ["test-fixtures"]
