[package]
name = "amp-job-materialize-datasets-derived"
edition.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
amp-data-store = { path = "../data-store" }
amp-job-core = { path = "../job-core" }
amp-parquet = { path = "../parquet" }
common = { path = "../common" }
datafusion.workspace = true
datasets-common = { path = "../datasets-common" }
datasets-derived = { path = "../datasets-derived" }
futures.workspace = true
js-runtime = { path = "../js-runtime" }
metadata-db = { path = "../metadata-db" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
