[package]
name = "admin-api"
version.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
utoipa = ["dep:utoipa", "amp-controller-admin-datasets/utoipa", "amp-controller-admin-jobs/utoipa", "amp-controller-admin-providers/utoipa", "amp-controller-admin-system/utoipa", "amp-controller-admin-tables/utoipa"]

[dependencies]
amp-controller-admin-datasets = { path = "../../controller-admin-datasets" }
amp-controller-admin-jobs = { path = "../../controller-admin-jobs" }
amp-controller-admin-providers = { path = "../../controller-admin-providers" }
amp-controller-admin-system = { path = "../../controller-admin-system" }
amp-controller-admin-tables = { path = "../../controller-admin-tables" }
amp-data-store = { path = "../../core/data-store" }
amp-datasets-registry = { path = "../../core/datasets-registry" }
amp-providers-registry = { path = "../../core/providers-registry" }
amp-worker-core = { path = "../../core/worker-core" }
async-trait.workspace = true
axum.workspace = true
common = { path = "../../core/common" }
metadata-db = { path = "../../core/metadata-db" }
serde.workspace = true
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
